# circt

./: .gitignore
include/circt/: InitAllPasses.h
include/circt/Conversion/: CombToCHALK.h  FIRRTLToCHALK.h  HWToCHALK.h  Passes.h  Passes.td  SynthFIRRTL.h
include/circt/Dialect/CHALK/: CHALK.td  CHALKAnnotations.h  CHALKAttributes.h  CHALKAttributes.td  CHALKCanonicalization.td  CHALKDeclarations.td  CHALKDialect.h  CHALKDialect.td  CHALKExpressions.td  CHALKOpInterfaces.h  (+14 more)
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/CombToCHALK/: CMakeLists.txt  CombToCHALK.cpp
lib/Conversion/FIRRTLToCHALK/: CMakeLists.txt  FIRRTLToCHALK.cpp  FIRRTLToCHALKEmbed.cpp  FIRRTLToCHALKParallel.cpp
lib/Conversion/HWToCHALK/: CMakeLists.txt  HWToCHALKEmbed.cpp
lib/Conversion/SynthFIRRTL/: CMakeLists.txt  Synth.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/CHALK/: CHALKAnalysis.cpp  CHALKDialect.cpp  CHALKOps.cpp  CMakeLists.txt
lib/Dialect/FIRRTL/: FIRRTLAttributes.cpp
lib/Dialect/OASIS/: CMakeLists.txt  OASISDialect.cpp  OASISOps.cpp  README.md
lib/Dialect/OASIS/oasis-opt/: CMakeLists.txt  oasis-opt.cpp
test/Conversion/FIRRTLToCHALK/: basic.mlir  embed-chalk.mlir  lower-to-chalk.mlir  parallel-chalk.mlir
test/Conversion/HWToCHALK/: embed-annotations-chalk.mlir  embed-chalk.mlir
test/Dialect/CHALK/: basic.mlir  init_placement.mlir
test/Dialect/FIRRTL/: annotations-inc-place.mlir  synth-annotations.mlir
test/firtool/: firtool.fir
tools/circt-opt/: CMakeLists.txt
tools/circt-reduce/: CMakeLists.txt
tools/firtool/: CMakeLists.txt  firtool.cpp
(+33 files in other folders)
