set(LLVM_LINK_COMPONENTS
  Support
  )

add_llvm_tool(circt-opt
 circt-opt.cpp
)
llvm_update_compile_flags(circt-opt)
target_link_libraries(circt-opt
  PRIVATE
  CIRCTAffineToStaticLogic
  CIRCTAnalysisTestPasses
  CIRCTCalyx
  CIRCTCalyxToHW
  CIRCTCalyxTransforms
  CIRCTCHALK
  CIRCTCHALKTransforms
  CIRCTESI
  CIRCTExportVerilog
  CIRCTFIRRTL
  CIRCTFIRRTLToCHALK
  CIRCTFIRRTLToHW
  CIRCTFIRRTLTransforms
  CIRCTFSM
  CIRCTHandshake
  CIRCTHandshakeToFIRRTL
  CIRCTHandshakeToHW
  CIRCTHandshakeTransforms
  CIRCTLLHD
  CIRCTLLHDToLLVM
  CIRCTLLHDTransforms
  CIRCTMoore
  CIRCTMooreToCore
  CIRCTMSFT
  CIRCTHW
  CIRCTHWToLLHD
  CIRCTHWToCHALK
  CIRCTHWTransforms
  CIRCTSCFToCalyx
  CIRCTScheduling
  CIRCTSchedulingTestPasses
  CIRCTSeq
  CIRCTStandardToHandshake
  CIRCTStandardToStaticLogic
  CIRCTStaticLogicOps
  CIRCTSV
  CIRCTSVTransforms
  CIRCTTransforms

  
  MLIRIR
  MLIRLLVMIR
  MLIRMemRef
  MLIROptLib
  MLIRParser
  MLIRFunc
  MLIRSupport
  MLIRTransforms
  MLIRSCF
  )
